<resources>
    <string name="app_name">Vaxify</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="proceed">PROCEED</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in_caps">LOG IN</string>
    <string name="age">Age</string>
    <string name="child_name">Name</string>
    <string name="submit">SUBMIT</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Child\'s Name</string>
    <string name="required">required</string>
    <string name="phone">Guardian Phone</string>
    <string name="vaccination_information_form">Vaccination Information Form</string>
    <string name="select_age">Select Age</string>
    <string name="select_location">Select Location</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="select_vaccine">Select Vaccine</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_gender">Select Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>